Sun Jun  2 10:33:10 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (handle_emacs_lisp): New function.
	(initialize_global_constants): Added elisp-comp to
	@common_sometimes.
	(seen_lispdir): New global.
	(scan_configure): Handle ud_PATH_LISPDIR.

	* elisp-comp: New file.

	* lisp.am: New file.

	* automake.in (generate_makefile): Run handle_emacs_lisp.

	* aclocal.m4 (ud_PATH_LISPDIR): New macro, from Ulrich Drepper.

	* automake.in (initialize_global_constants): Removed version.texi
	from common_sometimes.
	(initialize_global_constants): Added texinfo.tex to common_files.
	Test texinfo.test.
	(handle_tests): Allow dejagnu- and automake-style test suites to
	coexist.  Test dejagnu.test.
	(initialize_global_constants): New constants AC_CANONICAL_HOST,
	AC_CANONICAL_SYSTEM.
	(scan_configure): Use new constants.
	(handle_tests): Put target specific information into site.exp if
	AC_CANONICAL_* used.
	(read_am_file): Generate some extra variables when AC_CANONICAL_*
	used.
	(handle_options): Allow version number to have letters appended.
	(handle_tests): Error if RUNTEST, RUNTESTFLAGS defined but dejagnu
	option not specd.
	(initialize_global_constants): install_man_format changed to
	handle built man pages.

Wed May 29 10:35:01 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* config.guess, config.sub: New versions.

Tue May 28 19:27:11 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* configure.in (VERSION): Upped to 1.0.

Sat May 25 10:19:53 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (handle_tests): Handle dejagnu.
	(handle_options): Recognize dejagnu option.

	* dejagnu.am: New file.

Thu May 23 10:01:13 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (handle_dist): Run installcheck target from
	distcheck.

	* configure.in (VERSION): Upped to 0.34.

	* automake.in (scan_configure): Always allow upgrading to
	fp_PROG_INSTALL.  Test fpinstall.test.

Wed May 22 14:45:28 1996  Joshua Cowan  <jcowan@hermit.reslife.okstate.edu>
