@@ -1,6 +1,9 @@
 Priorities for release:
   [ none ]
 
+** Write test case to check that no-installman suppresses dirs on
+    "make installdirs"
+
 consider supporting "var+= stuff" syntax.  rewrite to just var=... on
 output.  This is sometimes convenient when you want to write a
 Makefile.am in more-or-less modular parts
@@ -274,6 +277,8 @@ document TAGS_DEPENDENCIES
 document new variables introduced when AC_CANONICAL_* used
 
 document _LISP handling
+
+document no-installinfo option
 
 ================================================================
 
