@@ -34,7 +34,7 @@ RUNTESTFLAGS =
 ## Name of tool to use.  Default is the same as the package.
 DEJATOOL = $(PACKAGE)
 
-check-DEJAGNU:
+check-DEJAGNU: site.exp
 	rootme=`cd $(top_builddir) && pwd`; \
 ## Life is easiest with an absolute srcdir, so do that.
 	srcdir=`cd $(srcdir) && pwd`; export srcdir; \
