@@ -1,3 +1,13 @@
+Fri Jun  7 12:31:31 1996  Tom Tromey  <tromey@creche.cygnus.com>
+
+	* automake.in (handle_tests): Fix quoting on `pwd`.
+	(handle_options): Recognize no-installinfo option.
+	(handle_man_pages): Don't put man directory on @installdirs if
+	no-installman is specified.
+	(handle_texinfo): Handle no-installinfo option.
+
+	* dejagnu.am (check-DEJAGNU): Depend on site.exp.
+
 Sun Jun  2 10:33:10 1996  Tom Tromey  <tromey@creche.cygnus.com>
 
 	* automake.in (handle_emacs_lisp): New function.
